# AFOS

./: .gitignore  CNAME  Cargo.toml  Justfile  LICENSE  Makefile  README.md  README_HOME.md  build_home.py  build_sysfs.py  grub.cfg  linker.ld  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  static.yml
assets/sys/: README.txt
assets/sys/apps/: cat.rhai  cp.rhai  echo.rhai  hello.rhai  help.rhai  ls.rhai  mkdir.rhai  mv.rhai  pwd.rhai  rm.rhai  sysinfo.rhai  touch.rhai
boot/: boot.asm  entry.asm  gdt.asm  isr.asm
crates/afos-api/: Cargo.toml
crates/afos-api/src/: lib.rs
crates/afos-core/: Cargo.toml
crates/afos-core/src/: app.rs  assets.rs  image.rs  lib.rs  security.rs  shell.rs  system.rs  vfs.rs
crates/afos-core/tests/: core.rs
crates/afos-runtime-rhai/: Cargo.toml
crates/afos-runtime-rhai/src/: lib.rs
crates/afos-runtime-rhai/tests/: runtime.rs
crates/afos-storage/: Cargo.toml
crates/afos-storage/src/: lib.rs
docs/: 404.md  APPS.md  ARCHITECTURE.md  BARE_METAL.md  FILESYSTEM.md  GETTING_STARTED.md  PORTING.md  SECURITY.md  UEFI.md  _config.yml  index.md
docs/_includes/: nav.md
examples/: gfx-demo.c  gfx-test.c  hello.bas  hello.c
files/: README.md
files/home/: README.txt
files/sys/components/: calculator.bas  gfx-test.bas  hello-basic.bas
fs/apps/: .gitkeep
fs/sys/: README.txt
fs/sys/apps/: cat.rhai  cp.rhai  echo.rhai  fetch.rhai  hello.rhai  help.rhai  ls.rhai  mkdir.rhai  mv.rhai  netinfo.rhai  pwd.rhai  rm.rhai  sysinfo.rhai  touch.rhai
fs/user/appdata/: .gitkeep
fs/user/config/: .gitkeep
fs/user/saves/: .gitkeep
include/: ac97.h  arp.h  ata.h  audio.h  basic.h  blockdev.h  brainfuck.h  ethernet.h  executable.h  fat32.h  filesystem.h  gdt.h  graphics.h  icmp.h  idt.h  ip.h  isr.h  keyboard.h  multiboot.h  pit.h  rtl8139.h  sb16.h  shell.h  types.h  vesa.h  wav.h
kernel/: ac97.c  arp.c  ata.c  audio.c  basic.c  blockdev.c  brainfuck.c  ethernet.c  executable.c  fat32.c  filesystem.c  gdt.c  graphics.c  icmp.c  idt.c  ip.c  isr.c  kernel.c  keyboard.c  malloc.c  pit.c  rtl8139.c  sb16.c  shell.c  vesa.c  wav.c
tools/: afos-pack.c
web/: CNAME  README.md  index.html  main.js  server.bat  server.py  style.css
xtask/: Cargo.toml
xtask/src/: main.rs
