[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
sha2 = "0.10.9"
tar = "0.4.44"

[[bin]]
name = "xtask"
path = "src/main.rs"

[lints]
workspace = true
