[package]
name = "afos-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
afos-api.workspace = true
argon2.workspace = true
subtle.workspace = true

[dev-dependencies]

[lib]
path = "src/lib.rs"

[lints]
workspace = true
